--- a/components/mint/MintCard/MintCard.module.css
+++ b/components/mint/MintCard/MintCard.module.css
@@ -96,3 +96,23 @@
     font-weight: 800;
     border-radius: 20%;
 }
+
+.succesfulMint {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+}
+
+.succesfulMint button {
+    padding: 5px;
+    background-color: #9233FF;
+    border-radius: 10px;
+    border: none;
+    color: #fff;
+    cursor: pointer;
+}
+.succesfulMint button:hover{
+    filter: brightness(110%)
+}
