--- a/components/mint/infoCard/InfoCard.module.css
+++ b/components/mint/infoCard/InfoCard.module.css
@@ -67,3 +67,21 @@
     font-size: 22px;
     font-weight: 400;
 }
+.spinner {
+    border: 4px solid rgba(256, 256, 256, .1);
+    border-left-color: #A35EF9;
+    width: 36px;
+    height: 36px;
+    border-radius: 50%;
+    animation: spin 1s linear infinite;
+  }
+
+  @keyframes spin {
+    0% {
+      transform: rotate(0deg);
+    }
+  
+    100% {
+      transform: rotate(360deg);
+    }
+  }
