--- a/components/mint/Calendar/Calendar.module.css
+++ b/components/mint/Calendar/Calendar.module.css
@@ -2,7 +2,7 @@
   
   display: flex;
   margin: 30px 0;
-  margin-left: calc(50% - 55.5px);
+  margin-left: calc(50% - calc(55.5px * 3));
   overflow: hidden;
 }
 
