--- a/components/Layout/LayoutStyles/Layout.module.css
+++ b/components/Layout/LayoutStyles/Layout.module.css
@@ -5,6 +5,7 @@
 }
 .container{
     min-height: 100vh;
+    min-width: 830px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
